--- a/resources/assets/website/css/website.css
+++ b/resources/assets/website/css/website.css
@@ -1056,8 +1056,7 @@ input:focus {
 .single-accordion:last-of-type {
   margin-bottom: 0; }
 .single-accordion h6 {
-  margin-bottom: 0;
-  text-transform: uppercase; }
+  margin-bottom: 0; }
   .single-accordion h6 a {
     background-color: transparent;
     border-radius: 0;
@@ -1067,7 +1066,6 @@ input:focus {
     padding: 20px 20px 20px 40px;
     position: relative;
     font-size: 20px;
-    text-transform: capitalize;
     font-weight: 700; }
     @media only screen and (max-width: 767px) {
       .single-accordion h6 a {
@@ -1677,7 +1675,8 @@ input:focus {
 .copywrite-area {
   position: relative;
   z-index: 1;
-  padding: 20px 0; }
+  padding: 20px 0; 
+  background-color: #0a0a0a;}
   .copywrite-area .copywrite-text p {
     font-size: 14px;
     margin-bottom: 0;
