--- a/resources/assets/website/css/website.css
+++ b/resources/assets/website/css/website.css
@@ -1,6 +1,6 @@
 /* ***** Master Stylesheet ***** */
 /* :: 1.0 Import Fonts */
-@import url("https://fonts.googleapis.com/css?family=Karla:400,700");
+@import url("https://fonts.googleapis.com/css?family=Karla:400,700&display=swap");
 
 body {
   font-family: "Karla", sans-serif;
