--- a/resources/assets/website/css/classy-nav.css
+++ b/resources/assets/website/css/classy-nav.css
@@ -129,7 +129,8 @@ img {
   src: url("../fonts/classy.eot?fftrrv");
   src: url("../fonts/classy.eot?fftrrv#iefix") format("embedded-opentype"), url("../fonts/classy.ttf?fftrrv") format("truetype"), url("../fonts/classy.woff?fftrrv") format("woff"), url("../fonts/classy.svg?fftrrv#classyfonts") format("svg");
   font-weight: normal;
-  font-style: normal; }
+  font-style: normal; 
+  font-display: swap; }
 .icon-classy-nav-down-arrow {
   font-family: 'classyfonts';
   speak: none;
